@@ -1,4 +1,4 @@
-// Copyright (C) 2003, 2004, 2005, 2006 Philip Aston
+// Copyright (C) 2003 - 2010 Philip Aston
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -61,7 +61,12 @@ public final class MessagePump {
 
     m_threadPool =
       new ThreadPool("Message pump", numberOfThreads, runnableFactory);
+  }
 
+  /**
+   * Start the pump.
+   */
+  public void start() {
     m_threadPool.start();
   }
 
